Fix deployment config and vercel.json

--- a/blogs/seo-blog-post.html
+++ b/blogs/seo-blog-post.html
@@ -85,8 +85,119 @@
 
 <link rel="icon" type="image/png" href="favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-</head>
-<body>
+<link href="/css/style.css" rel="stylesheet" type="text/css"/></head>
+<body><style>
+/* Light Version Header Styles (White Text) */
+.header.header-light-version .nav-link,
+.header.header-light-version .dropdown-toggle,
+.header.header-light-version .dropdown-icon {
+    color: #ffffff !important;
+}
+.header.header-light-version .header-logo-dark { display: none !important; }
+.header.header-light-version .header-logo-white { display: inline-block !important; }
+</style>
+<div data-animation="default" class="header w-nav header-light-version" data-easing2="ease" data-easing="ease" data-collapse="medium"
+      data-w-id="7a7443a6-35f8-b340-e299-05abf0e89308" role="banner" data-duration="300"
+      data-wf--header-v1--variant="base" data-doc-height="1">
+      <div data-w-id="7a7443a6-35f8-b340-e299-05abf0e89309" class="container-default w-container">
+        <div class="header-content"><a href="/index.html" class="header-logo w-nav-brand"><img
+              src="/img/logo251.81.png" loading="eager" width="251.81" height="80"
+              alt="Logo - Investflow Webflow Template" class="header-logo-dark" /><img src="/img/logov2.png"
+              loading="eager" width="251.81" height="80" alt="Logo - Investflow Webflow Template"
+              class="header-logo-white" /></a>
+          <div class="header-right-side">
+            <nav role="navigation" class="nav-menu w-nav-menu">
+              <ul role="list" class="list-nav-menu w-list-unstyled">
+                <li class="link-nav-item"><a href="/index.html" class="nav-link w-nav-link">Home</a></li>
+                <li class="link-nav-item">
+                  <div data-hover="true" data-delay="0" data-w-id="7a7443a6-35f8-b340-e299-05abf0e89316"
+                    class="header-dropdown w-dropdown">
+                    <div class="dropdown-toggle w-dropdown-toggle">
+                      <div>Company</div>
+                      <div class="icon-font-rounded dropdown-icon"></div>
+                    </div>
+                    <nav class="dropdown-content-wrapper w-dropdown-list">
+                      <div class="card dropdown-content-card">
+                        <div class="w-layout-grid dropdown-pages-column"><a href="/about.html"
+                            class="link-animation-wrapper w-inline-block">
+                            <div class="link-animation-text">About</div>
+                            <div class="link-animation-text-absolute">About</div>
+                          </a><a href="/our-team.html" class="link-animation-wrapper w-inline-block">
+                            <div class="link-animation-text">Team</div>
+                            <div class="link-animation-text-absolute">Team</div>
+                          </a>
+                          <div data-hover="true" data-delay="0" class="w-dropdown nested-product-dropdown"
+                            style="width: 100%; display: block;">
+                            <div class="w-dropdown-toggle"
+                              style="padding: 0; display: flex; align-items: center; justify-content: space-between; width: 100%;">
+                              <div class="link-animation-wrapper w-inline-block" style="flex-grow: 1;">
+                                <div class="link-animation-text">Product</div>
+                                <div class="link-animation-text-absolute">Product</div>
+                              </div>
+                              <div class="icon-font-rounded dropdown-icon" style="margin-left: 8px; font-size: 10px;">
+                              </div>
+                            </div>
+                            <nav class="w-dropdown-list nested-list"
+                              style="position: absolute; left: 100%; top: 0; margin-left: 0px; background-color: #fff; padding: var(--main-spacers--regular); min-width: max-content; white-space: nowrap; box-shadow: 0 4px 12px rgba(0,0,0,0.1); border-radius: var(--border-radius--br-size-5);">
+                              <a href="/eventify-app.html" class="link-animation-wrapper w-inline-block"
+                                style="display: block; margin-bottom: 8px; padding: 4px;">
+                                <div class="link-animation-text">Eventify</div>
+                                <div class="link-animation-text-absolute">Eventify</div>
+                              </a>
+                              <a href="/wealthwise.html" class="link-animation-wrapper w-inline-block"
+                                style="display: block; padding: 4px;">
+                                <div class="link-animation-text">Wealthwise</div>
+                                <div class="link-animation-text-absolute">Wealthwise</div>
+                              </a>
+                            </nav>
+                          </div>
+                        </div>
+                      </div>
+                    </nav>
+                  </div>
+                </li>
+                <li class="link-nav-item show-on-mbl"><a id="w-node-_99805214-dd54-e7f3-2549-05c0df1040fb-df1040fb"
+                    data-wf--primary-button--variant="base" data-w-id="99805214-dd54-e7f3-2549-05c0df1040fb"
+                    href="/contact-us.html" class="primary-button w-inline-block">
+                    <div class="button-content-flex gap-0">
+                      <div>Get started</div>
+                      <div class="button-icon-wrapper">
+                        <div class="button-icon"><svg xmlns="http://www.w3.org/2000/svg" width="14px"
+                            viewBox="0 0 16 15" fill="none" class="button-arrow">
+                            <path
+                              d="M7.8589 0.996826L14.1772 7.02789M14.1772 7.02789L7.8589 13.059M14.1772 7.02789L1.87854 7.02789"
+                              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            </path>
+                          </svg></div>
+                      </div>
+                    </div>
+                  </a></li>
+              </ul>
+            </nav>
+            <div class="hidden-on-mobile-landscape"><a id="w-node-_99805214-dd54-e7f3-2549-05c0df1040fb-df1040fb"
+                data-wf--primary-button--variant="base" data-w-id="99805214-dd54-e7f3-2549-05c0df1040fb"
+                href="/contact-us.html" class="primary-button w-inline-block">
+                <div class="button-content-flex gap-0">
+                  <div>Get started</div>
+                  <div class="button-icon-wrapper">
+                    <div class="button-icon"><svg xmlns="http://www.w3.org/2000/svg" width="14px" viewBox="0 0 16 15"
+                        fill="none" class="button-arrow">
+                        <path
+                          d="M7.8589 0.996826L14.1772 7.02789M14.1772 7.02789L7.8589 13.059M14.1772 7.02789L1.87854 7.02789"
+                          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                      </svg></div>
+                  </div>
+                </div>
+              </a></div>
+            <div class="hamburger-menu w-nav-button">
+              <div class="hamburger-menu-flex">
+                <div class="hamburger-menu-line top"></div>
+                <div class="hamburger-menu-line bottom"></div>
+              </div>
+            </div>
+          </div>
+        </div></div></div>
+
     <div class="container">
         <h1>The Future of Financial Technology: How AI is Revolutionizing Investment Management</h1>
         
@@ -143,7 +254,7 @@
 
         <p>At Sicherhaven, we're committed to staying at the forefront of these technological innovations, helping our clients navigate the evolving world of AI-powered financial services.</p>
 
-        <a href="contact-us" class="cta">Learn More About Our AI-Powered Solutions</a>
+        <a href="/contact-us.html" class="cta">Learn More About Our AI-Powered Solutions</a>
     </div>
 </body>
 </html>
