--- a/internal-container-925px.html
+++ b/internal-container-925px.html
@@ -134,8 +134,8 @@
         }
     </style>
 
-<link rel="icon" type="image/png" href="favicon.png"/>
-<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+<link rel="icon" type="image/svg+xml" href="favicon.svg"/>
+<link rel="shortcut icon" type="image/svg+xml" href="favicon.svg"/>
 </head>
 <body>
     <div class="inner-container---925px center">
